# iota-bindings

java/cargo/: Cargo.toml
java/cargo/src/: lib.rs  util.rs
java/gradle/: build.gradle  settings.gradle
java/gradle/exampleapp/: build.gradle  proguard-rules.pro
java/gradle/exampleapp/src/androidTest/java/rs/iota/mam/android/example/: ExampleInstrumentedTest.java
java/gradle/exampleapp/src/main/: AndroidManifest.xml
java/gradle/exampleapp/src/main/java/rs/iota/mam/android/example/: MainActivity.java
java/gradle/exampleapp/src/main/res/layout/: activity_main.xml
java/gradle/exampleapp/src/main/res/values/: strings.xml
java/gradle/exampleapp/src/test/java/rs/iota/mam/android/example/: ExampleUnitTest.java
java/gradle/gradle/wrapper/: gradle-wrapper.properties
java/gradle/shared/: build.gradle
java/gradle/shared/src/main/java/rs/iota/jni/: IOTA.java  MAM.java  MerkleBranch.java  MerkleTree.java  NativeLibraryLoader.java
java/gradle/shared/src/main/java/rs/iota/jni/util/: Environment.java
java/gradle/shared/src/test/java/rs/iota/jni/: MAMTest.java
